# bob-build

./: README.md  pyproject.toml
src/bob/: __init__.py  cli.py  constants.py  jobserver.py  log.py  prelude.py  pretty.py
src/bob/api/: general.py  path.py  rule.py  scope.py  subproject.py  variable.py
src/bob/commands/: build.py  compdb.py  configure.py
src/bob/core/: context.py
src/bob/plugins/: _c.py  _make.py
src/bob/utilities/: click.py
tests/: test_api.py  test_build.py  test_cli.py  test_configure.py  test_expression.py  test_prelude.py  test_provider.py  test_rule.py  test_rule_input.py  test_scope.py  test_targets.py
tests/cases/: basic.bob  basic.ninja  description.ninja  paths.bob  paths.ninja  rule-input.ninja  subprojects.bob  subprojects.ninja  variables.bob  variables.ninja
tests/cases/utilities/: included.bob  subbobbed.bob
tests/plugins/: test_c.py  test_make.py
tour/: Bobfile  targets.json
tour/src/: Bobfile  basic.c
tour/src/make/: Bobfile
