[project]
name = "bob"
version = "0.1.0"
description = "The ergonomic Ninja-based build system."
readme = "README.md"
authors = [{ name = "Noam Zaks", email = "noam@noamzaks.com" }]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = []

[project.scripts]
bob = "bob:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.12.0"]
build-backend = "uv_build"
